other/rec-req/require-unique-uid-per-workload/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-unique-uid-per-workload
policies:
- ../require-unique-uid-per-workload.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: require-unique-uid-per-workload
  resources:
  - already-taken-user
  result: fail
  rule: require-unique-uid
- kind: Pod
  policy: require-unique-uid-per-workload
  resources:
  - free-user
  result: pass
  rule: require-unique-uid
variables: variables.yaml
